# myfacesnapjournal

./: .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  FACEBOOK_SETUP.md  INSTALL.md  LICENSE  MASTODON_INTEGRATION.md  MASTODON_TEST.md  MIGRATION_STRATEGY.md  README.md  SEMANTIC_COLORS.md  build-app.sh  env.example  index.html  package-lock.json  package.json  postcss.config.js  setup-dev.sh  setup-tunnel.sh  setup.sh  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vite.config.web.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml  ci.yml
public/: oauth-callback.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql  002_add_search_indexes.sql  003_add_analytics.sql  004_add_source_fields.sql
src-tauri/src/: ai_service.rs  database.rs  github_service.rs  main.rs
src/contexts/: AppContext.tsx  FeedbackModalContext.tsx  ThemeContext.tsx
src/pages/: CompanionPage.tsx  DatabaseSettingsPage.tsx  DocumentsPage.tsx  EchoPage.tsx  FeedPage.tsx  JournalPage.tsx  SettingsPage.tsx  VaultPage.tsx
src/services/: backgroundFeedService.ts  facebookScrapingService.ts  facebookService.ts  githubService.ts  mastodonService.ts  substackService.ts  tunnelService.ts  twitterService.ts  webAIService.ts
src/stores/: analyticsStore.ts  blueskyStore.ts  documentsStore.ts  echoStore.ts  facebookStore.ts  journalStore.ts  mastodonStore.ts  notificationStore.ts  twitterStore.ts
src/styles/: index.css  theme.css  utilities.css
(+53 files in other folders)
