[package]
name = "myface-snapjournal"
version = "0.1.0"
description = "Local-first AI journaling app with echo insights and companion personas"
authors = ["MyFace Team"]
license = "MIT"
repository = "https://github.com/myface/snapjournal"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
# sqlcipher = { version = "0.1", optional = true }  # Not available, will implement later
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tauri-plugin-dialog = "2"
sqlx-migrate = "0.7.1"
url = "2.5"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# [lib]
# name = "myface_snapjournal_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]
